# Restaurant_app_order_api

./: .env  .gitignore  Cargo.toml  README.md
migrations/: create_orders_table.sql
src/: api.rs  db.rs  lib.rs  main.rs  models.rs  route.rs  utils.rs
tests/: integration_tests.rs  unit_tests.rs
