[package]
name = "Restaurant_app_order_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
rand = "0.8"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
