[package]
name = "restaurant_app_order_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
dotenvy = "0.15"
actix-web = "4.0"
actix-rt = "2.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

[dev-dependencies]
once_cell = "1.20.2"
